@@ -362,6 +362,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 4389) Fix math options on zh-hk and zh-tw (but not localized)
 * Remove unused OutputPage::addCookie()
 * Set cookies to secure mode based on use of HTTPS or $wgCookieSecure
+* (bug 4392) Update of LanguageSr.php
 
 
 === Caveats ===
